<resources>
    <!--development-->
    <string name="app_name">FitnessAdmin</string>
    <string name="title_home">Home</string>
    <string name="title_gyms">Gyms</string>
    <string name="title_session_types">Session types</string>
    <string name="title_select_session_type">Select session type</string>
    <string name="title_select_client">Select client</string>
    <string name="title_select_gyms">Select gym</string>
    <string name="title_admins">Administrators</string>
    <string name="title_select_admins">Select administrator</string>
    <string name="title_coaches">Coaches</string>
    <string name="title_select_coach">Select coach</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="caption_edit">Edit</string>
    <string name="caption_delete">Delete</string>
    <string name="caption_save">Save</string>
    <string name="caption_close">Close</string>
    <string name="caption_name">Name</string>
    <string name="caption_email">Email</string>
    <string name="caption_address">Address</string>
    <string name="caption_ok">OK</string>
    <string name="caption_cancel">Cancel</string>
    <string name="caption_blank_fields">You need to fill in the blank fields!</string>
    <string name="caption_log_out">Log out</string>
    <string name="message_error_data_obtain">Error occurred when obtaining data</string>
    <string name="message_error_data_save">Error occurred when saving data</string>
    <string name="message_error_data_operate">Error occurred when operating data</string>
    <string name="message_error_gym_null">Gym is null</string>
    <string name="message_error_client_null">Client is null</string>
    <string name="message_error_admin_null">Admin is null</string>
    <string name="message_error_coach_null">Coach is null</string>
    <string name="message_error_org_data_null">Organisation data is null</string>
    <string name="message_error_ununique_id">ID is not unique</string>
    <string name="caption_warning_title">Warning</string>
    <string name="caption_no_button">No</string>
    <string name="caption_yes_button">Yes</string>
    <string name="message_data_modified">Close without saving?</string>
    <string name="message_ask_delete_gym">Delete gym?</string>
    <string name="message_ask_delete_admin">Delete admin?</string>
    <string name="message_ask_delete_coach">Delete coach?</string>
    <string name="message_ask_delete_client">Delete client?</string>
    <string name="caption_organisation_owner">Organisation owner</string>
    <string name="caption_my_own_gym">My own one</string>
    <string name="caption_personnel">Personnel</string>
    <string name="title_ask_gym_owner">Which gym are you working with?</string>
    <string name="title_invite_personnel">Enter user data</string>
    <string name="caption_send">Add</string>
    <string name="caption_job_offer">Job offer</string>
    <string name="text_invitation_to_personnel">Hello! You\'ve been chosen as one of the %1$s in our gym! We are waiting for you on our app FitnessFactory! Just log in with your email and enjoy working with our team!</string>
    <string name="caption_admins">admins</string>
    <string name="caption_coaches">coaches</string>
    <string name="caption_clients">clients</string>
    <string name="message_error_email_isnt_unique">User\'s email is not unique</string>
    <string name="message_error_sign_in_process">Signing in is in process</string>
    <string name="message_obtaining_organistations">Obtaining your data…</string>
    <string name="message_singing_you_in">Signing you in…</string>
    <string name="title_ask_org_name">Enter your organisation\'s name</string>
    <string name="message_ask_remove_personnel_from_gym">Remove gym from this %1$s?</string>
    <string name="message_ask_remove_gym">Remove gym?</string>
    <string name="caption_remove">Remove</string>
    <string name="caption_ask_no_more">Ask no more</string>
    <string name="title_question">Question</string>
    <string name="message_send_invitation">Send email invitation for this %1$s?</string>
    <string name="caption_admin">admin</string>
    <string name="caption_admin_capital">Admin</string>
    <string name="caption_coach">coach</string>
    <string name="caption_coach_capitalized">Coach</string>
    <string name="title_edit_item">Edit item</string>
    <string name="title_add_item">Add item</string>
    <string name="message_admin_is_registered">Administrator is already registered</string>
    <string name="message_coach_is_registered">Coach is already registered</string>
    <string name="message_client_is_registered">Client is already registered</string>
    <string name="message_error_no_data">There is no data</string>
    <string name="message_error_canceled">Canceled</string>
    <string name="title_organisation">Company info</string>
    <string name="title_clients">Clients</string>
    <string name="message_error_data_delete">Error occurred when deleting data</string>
    <string name="message_email_occupied">Email is already occupied</string>
    <string name="message_gym_duplicate">Gym with these name and address already exists</string>
    <string name="message_client_not_unique">Client id is not unique</string>
    <string name="caption_people">people</string>
    <string name="message_ask_delete_session_type">Delete session type?</string>
    <string name="message_session_type_null">Session type is null</string>
    <string name="message_session_type_not_unique">Session type id is not unique</string>
    <string name="message_error_session_type_name_ununique">Session type name is not unique</string>
    <string name="message_session_type_name_occupied">Session type with this name already exists</string>
    <string name="message_error_restoring_session_type">Error occurred when restoring session type\'s state</string>
    <string name="message_error_people_amount_null">people amount is null</string>
    <string name="message_error_price_null">price is null</string>
    <string name="caption_people_amount">People amount</string>
    <string name="hint_price">Price (%1$s)</string>
    <string name="message_error_session_null">Session is null</string>
    <string name="caption_date">Date</string>
    <string name="caption_start_time">Start time</string>
    <string name="caption_end_time">End time</string>
    <string name="caption_gym">Gym</string>
    <string name="caption_session_type">Session type</string>
    <string name="message_ask_delete_session">Delete session?</string>
    <string name="caption_arrange_session">Arrange session</string>
    <string name="caption_empty_sessions_list">Add sessions...</string>
    <string name="message_error_date_null">Date is null</string>
    <string name="message_error_coach_occupied">Coach already has session at that time</string>
    <string name="message_error_wrong_dates">Time of start and end don\'t form period!</string>
    <string name="message_selection_failed">Selection failed!</string>
    <string name="message_ask_remove_client_from_session">Remove client from this session?</string>
    <string name="message_ask_remove_coach_from_session">Remove coach from this session?</string>
    <string name="caption_add_items">Add items...</string>
    <string name="message_error_item_occupied">Deletion is impossible. %1$s is occupied!</string>
    <string name="caption_client_capitalized">Client</string>
    <string name="caption_client">client</string>
    <string name="caption_client_capital">Client</string>
    <string name="message_error_session_type_occupied">Deletion is impossible. Session type is occupied!</string>
    <string name="message_error_client_occupied">Deletion is impossible. Client is occupied</string>
    <string name="message_error_session_id_not_unique">Session id is not unique</string>
    <string name="message_error_session_packed">Session is already packed</string>
    <string name="caption_from">from</string>
    <string name="caption_until">until</string>
    <string name="message_input_invalid_value">Valid value is from %1$s to %2$s!</string>
    <string name="message_error_session_type_id_not_unique">Session type id is not unique</string>
    <string name="message_error_gym_id_not_unique">Gym id is not unique</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_select_session">Select session</string>
    <string name="title_todays_sessions">Today\'s sessions</string>
    <string name="caption_day">Day</string>
    <string name="caption_add">Add</string>
    <string name="message_error_coach_not_have_gym">This coach doesn\'t work at this gym</string>
    <string name="message_error_email_invalid">Email invalid! Input correct email address</string>
    <string name="message_error_name_invalid">Input name</string>
    <string name="title_settings">Settings</string>
    <string name="preferences_language_title">Select language
    </string> <string name="caption_russian_language">Russian</string>
    <string name="caption_english_language">English</string>
    <string name="caption_system">System</string>
    <string name="caption_select_language">Select language</string>
    <string name="caption_session">Session</string>
    <string name="message_gym_occupied">This gym is occupied from %1$s to %2$s</string>
    <string name="caption_phone">Phone</string>
    <string name="caption_tax_id">Tax Id</string>
    <string name="caption_bank_details">Bank Details</string>
    <string name="caption_blank_organisation_name">You need to fill in organisation name!</string>
    <string name="caption_search">Search</string>


    <!--authentication-->
    <string name="caption_wrong_auth">Authentication failed</string>
    <string name="caption_user_null">User is not signed in</string>
    <!--authentication-->

    <!--days of week-->
    <string name="title_monday">Mon</string>
    <string name="title_tuesday">Tue</string>
    <string name="title_wednesday">Wed</string>
    <string name="title_thursday">Thu</string>
    <string name="title_friday">Fri</string>
    <string name="title_saturday">Sat</string>
    <string name="title_sunday">Sun</string>
    <!--days of week-->

    <!--months-->
    <string name="title_january">January</string>
    <string name="title_february">February</string>
    <string name="title_march">March</string>
    <string name="title_april">April</string>
    <string name="title_may">May</string>
    <string name="title_june">June</string>
    <string name="title_july">July</string>
    <string name="title_august">August</string>
    <string name="title_september">September</string>
    <string name="title_october">October</string>
    <string name="title_november">November</string>
    <string name="title_december">December</string>
    <!--months -->
    <!--development-->


</resources>