<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grHome">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:title="@string/title_home" />
    </group>

    <group android:id="@+id/grPeople">
        <item
            android:id="@+id/nav_admins"
            android:checkable="true"
            android:title="@string/title_admins"/>

        <item
            android:id="@+id/nav_coaches"
            android:checkable="true"
            android:title="@string/title_coaches"/>

        <item
            android:id="@+id/nav_clients"
            android:checkable="true"
            android:title="@string/title_clients" />
    </group>

    <group android:id="@+id/grCatalogs">
        <item
            android:id="@+id/nav_gyms"
            android:checkable="true"
            android:title="@string/title_gyms" />

        <item
            android:id="@+id/nav_session_types"
            android:checkable="true"
            android:title="@string/title_session_types"/>
    </group>

    <group android:id="@+id/grOptions">
        <item
            android:id="@+id/nav_organisation"
            android:checkable="true"
            android:title="@string/title_organisation" />
        <item
            android:id="@+id/nav_settings"
            android:checkable="true"
            android:title="@string/title_organisation" />
    </group>

</menu>
