<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.example.fitnessfactory.ui.viewmodels.editors.SessionEditorViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rlFields"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:hint="@string/caption_date"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:textDate="@{model.session.date}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ilDate"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ilStartTime"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/component_margin"
                    android:layout_weight="1"
                    android:hint="@string/caption_start_time"
                    app:hintEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:text="@{model.session.startTimeString}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ilEndTime"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ilStartTime"
                    android:layout_marginStart="@dimen/component_margin"
                    android:layout_weight="1"
                    android:hint="@string/caption_end_time"
                    app:hintEnabled="true">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:text="@{model.session.endTimeString}" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilGym"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llTime"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:hint="@string/caption_gym"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtGym"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:text="@{model.gymName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilSessionType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ilGym"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:hint="@string/caption_session_type"
                app:hintEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtSessionType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:text="@{model.sessionTypeName}" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tlParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlFields"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            app:tabBackground="@color/white"
            app:tabIndicatorColor="@color/royalBlue"
            app:tabSelectedTextColor="@color/royalBlue" />

        <androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/vpParticipants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tlParticipants"
            android:orientation="vertical">

        </androidx.viewpager2.widget.ViewPager2>

    </RelativeLayout>
</layout>