<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recycler_view_two_line_height">

    <RelativeLayout
        android:id="@+id/rowBG"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:backgroundTint="?attr/warnColor"
            android:text="@string/caption_remove" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rowFG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/list_item_margin"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGymName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center"
                android:layout_marginTop="@dimen/list_item_margin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvSessionTypeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="start|center"
                android:layout_marginBottom="@dimen/list_item_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/white"
            android:layout_marginTop="@dimen/list_item_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvCaptionFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start|center"
                    android:layout_gravity="center"
                    android:text="@string/caption_from"

                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

                <TextView
                    android:id="@+id/tvStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/list_item_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCaptionUntil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="start|center"
                    android:text="@string/caption_until"
                    android:layout_gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

                <TextView
                    android:id="@+id/tvEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>